--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@wpackio/scripts": "^4.3.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "bulma": "^0.8.0",
     "node-sass": "^4.13.0",
     "postcss-cli": "^7.1.0",
@@ -18,6 +19,7 @@
     "archive": "wpackio-scripts pack"
   },
   "dependencies": {
-    "@wpackio/entrypoint": "^4.3.0"
+    "@wpackio/entrypoint": "^4.3.0",
+    "styled-components": "^5.0.0"
   }
 }
