--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "archive": "wpackio-scripts pack"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@wpackio/entrypoint": "^4.3.0",
     "styled-components": "^5.0.0"
   }
